# awesome-config-2

./: README.md  rc.lua  theme.lua
rust_projects/control-music/: Cargo.toml  deny.toml
rust_projects/control-music/src/: main.rs  player.rs  player_selection.rs
rust_projects/get_battery_percent/: Cargo.toml
rust_projects/get_battery_percent/src/: main.rs
