[package]
name = "control-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
color-eyre = "0.6.2"
dbus = "0.9.7"
dirs = "5.0.1"
thiserror = "1.0.47"
serde = { version = "<=1.0.171", features = ["derive"] }
serde_json = "1.0.105"
